retry_and_others

--- a/janken/index.html
+++ b/janken/index.html
@@ -41,7 +41,7 @@
     </tbody>
   </table>
   <div class="instruction"></div>
-<div><font color="#ff00ff">マシンの手</font></div>
+<div id="results" width="600" height="30"></div>
 <div id="rps" class="clearfix">
 <div class="machine_buttons">
 	<img src="mp.jpg" class="m_paper" value="パー" />
@@ -54,6 +54,8 @@
 	<img src="mr.jpg" class="m_rock_copy" />
 </div>
 <div id="battle_field" class="clearfix">
+<div class="bf-text-top"><font color="#ff00ff" size="-1">マシンの手</font></div>
+<div class="bf-text-bottom"><font color="#0000ff" size="-1">あなたの手（選んでください）</font></div>
 <div id="hands">
 	<div id="win"><img src="win.png" /></div>
 </div>
@@ -75,14 +77,13 @@
 	<img src="s.jpg" class="scissors_copy" />
 	<img src="p.jpg" class="paper_copy" />
 </div>
-<div><font color="#0000ff">あなたの手（選んでください）</font></div>
 </div>
 <div id="graph"></div>
 
 <!--
 <div id="bar" width="600" height="30"></div>
 -->
-<div id="results" width="600" height="30"></div>
+<div class=footer></div>
 <!--<input type="button" style="font:10.5pt Arial;" value="Reset" onclick="Reset()" /> -->
 <table>
   <tbody>
@@ -94,7 +95,7 @@
 <table width="545">
   <tbody>
     <tr>
-      <td align="center"><font size="2pt" face="Arial">Version 1.0 : 2018/04/10</font>&#160;</td>
+      <td align="center"><font size="2pt" face="Arial">Version 1.1 : 2018/04/26</font>&#160;</td>
       <td align="center"><font size="2pt" face="Arial"><font color="#000000" size="2">The number of visitors since 2018/04/10: <span lang="EN-US" style="font-size:11.0pt;font-family:
 Arial"><img border="0" width="40" height="10" id="_x0000_i1030" src="http://www.ton.scphys.kyoto-u.ac.jp/~shino/counter/count.cgi?janken" /></span></font></font></td>
     </tr>
