--- a/janken_iphone_j/index.html
+++ b/janken_iphone_j/index.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" src="rpsm.js"></script>
 
 
-<title>Janken Machine</title>
+<title>じゃんけんマシン</title>
 </head>
 <body onload="Reset();" style="font-family:Optima,Arial">
 <div id="fb-root"></div>
@@ -27,18 +27,17 @@
   <table bgcolor="#ffffff">
     <tbody>
       <tr>
-        <td align="center" bgcolor="#ccccff" height="35" width="236"><font size="+2"><b><font size="+0"><font size="+1">AI Rock-Scissor-Paper (Janken) machine</font></font></b></font></td>
+        <td align="center" bgcolor="#ccccff" height="35" width="236"><font size="+2"><b><font size="+0"><font size="+2">AI じゃんけんマシン</font></font></b></font></td>
         <td align="center" bgcolor="#ffffff" height="35" width="278"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.ton.scphys.kyoto-u.ac.jp/~shino/janken_iphone/" data-size="default" data-count="vertical">Tweet</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-  <div class="fb-share-button" data-href="http://www.ton.scphys.kyoto-u.ac.jp/~shino/janken_iphone/" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.ton.scphys.kyoto-u.ac.jp%2F%7Eshino%2Fjanken_iphone%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share </a></div>
+  <div class="fb-share-button" data-href="http://www.ton.scphys.kyoto-u.ac.jp/~shino/janken_iphone/" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.ton.scphys.kyoto-u.ac.jp%2F%7Eshino%2Fjanken_iphone%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">シェア</a></div>
 <div class="g-plus" data-action="share" data-height="24" data-href="http://www.ton.scphys.kyoto-u.ac.jp/~shino/janken_iphone/"></div>
         </td>
       </tr>
     </tbody>
   </table>
 </div>
-<div><br />
-</div>
+<div><font color="#999900" size="+3">どっちが先に30勝するかな？</font></div>
 <div id="results" width="600" height="40"></div>
 <div id="rps" class="clearfix">
 <div class="machine_buttons">
@@ -52,8 +51,8 @@
 	<img src="mr.jpg" class="m_rock_copy" />
 </div>
 <div id="battle_field" class="clearfix">
-<div class="bf-text-top"><font color="#ff00ff" size="-1">Machine's move</font></div>
-<div class="bf-text-bottom"><font color="#0000ff" size="-1">your move: select one</font></div>
+<div class="bf-text-top"><font color="#ff00ff" size="-1">マシンの手</font></div>
+<div class="bf-text-bottom"><font color="#0000ff" size="-1">あなたの手（選んでください）</font></div>
 <div id="hands">
 	<div id="win"><img src="win.png" /></div>
 </div>
@@ -85,33 +84,16 @@
 <!--<input type="button" style="font:10.5pt Arial;" value="Reset" onclick="Reset()" /> -->
 <table>
   <tbody>
-      <tr>
-        <td bgcolor="#ffffff" height="44" width="518">
-        <table width="517">
-          <tbody>
-            <tr>
-              <td bgcolor="#ccffcc"><font size="-1">Janken Machine has you all figured out before you play your next hand.
-              It analyzes your hands, and tries to figure out slight biases you have.
-              The more you play it, the stronger it gets. Whoever reaches 30 wins first
-              wins. Let the games begin!</font></td>
-            </tr>
-            <tr>
-              <td>&#160;</td>
-            </tr>
-          </tbody>
-        </table>
-        <font size="-1">references: <a href="https://www.iwanami.co.jp/book/b264786.html">Shigeru Shinomoto - Information Processing Theory: Prediction and Simulations
-        Iwanami-Shoten Publishers</a> 6.5 Building a Janken Machine. pp101-107. This web app was constructed
-        in collaboration with Kazuki Nakamura and Kensuke Arai. Any questions or
-        comments, contact <a href="mailto:shinomoto@scphys.kyoto-u.ac.jp?Subject=janken">Shigeru Shinomoto here</a>.<br />
-        [1] <a href="http://www.ton.scphys.kyoto-u.ac.jp/~shino/janken_iphone_j/">Japanese version</a>. [2] <a href="http://www.ton.scphys.kyoto-u.ac.jp/~shino/janken/">PC app</a>. [3] <a href="c.html"> C code</a>. </font></td>
-      </tr>
+    <tr>
+      <td bgcolor="#cccc99" height="44" width="518"><font size="-1">■解説■ このじゃんけんマシンはあなたが手を選ぶ前に次の手を決めています．じゃんけんを繰り返すうちにあなたの手の癖を読み取って徐々に強くなっていきます．最初に30回勝ったほうが優勝です．勝負しましょう．<br />
+      ■詳細■ <a href="https://www.iwanami.co.jp/book/b264786.html">篠本 滋「情報処理概論 - 予測とシミュレーション」（岩波書店）</a>6．5節「じゃんけんマシンを作ってみよう」 pp101-107． <a href="http://www.ton.scphys.kyoto-u.ac.jp/~shino/janken/">PC用ウェブアプリ</a>．<a href="c.html"> Cプログラム</a>． ウェブアプリに関するお問い合わせやコメントは<a href="mailto:shinomoto@scphys.kyoto-u.ac.jp?Subject=janken">篠本 滋</a>までご連絡ください．</font></td>
+    </tr>
   </tbody>
 </table>
 <table width="529">
   <tbody>
     <tr>
-      <td align="center" width="172"><font size="2pt" face="Arial">version 2.2 : 2018/09/24</font> &#160;</td>
+      <td align="center" width="172"><font size="2pt" face="Arial">version 2.1 : 2018/09/14</font> &#160;</td>
       <td align="center" width="344"><font size="2pt" face="Arial"><font color="#000000" size="2">The number of visitors since 2018/04/10: <span lang="EN-US" style="font-size:11.0pt;font-family:
 Arial"><img border="0" width="40" height="10" id="_x0000_i1030" src="http://www.ton.scphys.kyoto-u.ac.jp/~shino/counter/count.cgi?janken" /></span></font></font></td>
     </tr>
